--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <header class="header">
                     <nav class="nav-wrapper">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="placeholder.html">Placeholder</a></li>
+                            <li><a class="active" href="index.html">Home</a></li>
+                            <li><a href="aboutus.html">About us</a></li>
                             <li><a href="placeholder.html">Placeholder</a></li>
                             <li><a href="placeholder.html">Placeholder</a></li>
                             <li><a href="placeholder.html">Placeholder</a></li>
@@ -26,13 +26,22 @@
             </header>
         </div>
         <div class="content">
-            <div class="section">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum id venenatis a. Sed risus ultricies tristique nulla. Quam id leo in vitae turpis massa. Magna ac placerat vestibulum lectus mauris ultrices eros in cursus. Dolor purus non enim praesent. Nibh sit amet commodo nulla facilisi. Nibh cras pulvinar mattis nunc. Odio eu feugiat pretium nibh ipsum. Ac turpis egestas integer eget aliquet nibh praesent.</p>
+            <div class="skip-down">
+                <a href="#info"> V  Click here to explore!  V</a>
             </div>
-            <div class="section2">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum id venenatis a. Sed risus ultricies tristique nulla. Quam id leo in vitae turpis massa. Magna ac placerat vestibulum lectus mauris ultrices eros in cursus. Dolor purus non enim praesent. Nibh sit amet commodo nulla facilisi. Nibh cras pulvinar mattis nunc. Odio eu feugiat pretium nibh ipsum. Ac turpis egestas integer eget aliquet nibh praesent.
-                </p>
+            <div id="info">
+                <div class="section">
+                    <h2>About us</h2>
+                    <P>Zjisti, kdo jsme a nějaké důležité informace o nás.</P>
+                    <a href="aboutus.html">Zjistit více!</a>
+                </div>
+                <div class="section2">
+                    <h2>Members</h2>
+                    <p>
+                        Zjisti, kdo všechno je členem našeho řádu a nějaké zajímavé informace o něm.
+                    </p>
+                    <a href="members.html">Zjistit více!</a>
+                </div>
             </div>
         </div>
     </body>
