--- a/aboutus.html
+++ b/aboutus.html
@@ -13,12 +13,56 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a class="active" href="aboutus.html">About us</a></li>
-                        <li><a href="placeholder.html">Placeholder</a></li>
-                        <li><a href="placeholder.html">Placeholder</a></li>
-                        <li><a href="placeholder.html">Placeholder</a></li>
+                        <li><a href="veverkoviti.html">Veverkovití</a></li>
+                        <li><a href="bobroviti.html">Bobrovití</a></li>
+                        <li><a href="dikobrazoviti.html">Dikobrazovití</a></li>
+                        <li><a href="nutriovití.html">Nutriovití</a></li>
+                        <li><a href="morcatoviti.html">Morčatovití</a></li>
+                        <li><a href="mysoviti.html">Myšovití</a></li>
+                        <li><a href="zdroje.html">Zdroje</a></li>
                     </ul>
                 </nav>
+                <div class="image-wrapper">
+                    <h1>
+                        About us
+                    </h1>
+                </div>
             </header>
+        </div>
+        <div class="content">
+            <div class="section2">
+                <h2>Zařazení</h2>
+                <li>Doména : Eukaryota</li>
+                <li>Říše : živočichové</li>
+                <li>Kmen : strunatci</li>
+                <li>Třída : savci</li>
+                <li>Podtřída : placentálové</li>
+                <li>Řád --> Hlodavci</li>
+            </div>
+            <div class="section">
+                <h2>Důležité informace</h2>
+                <li>Nejpočetnější řád savců.</li>
+                <li>Většinou menší.</li>
+                <li>Přední řezáky přeměněny na hlodáky.</li>
+                <li>Špičáky chybí.</li>
+                <li>Hlodáky -> přední strana tvrdá sklovina, zadní strana měkká zubovina. Dorůstají během celého života.</li>
+                <li>Většina býložravá, výjimečně všežravci, zřídka hmyzožravci nebo masožravci.</li>
+                <li>Rodí velký počet mláďat – pravidelné přemnožování.</li>
+                <li>Vyvinuli se v druhohorách.</li>
+                <li>Rozšířeni po celém světě, různé čeledi obsazují různá prostředí.</li>
+            </div>
+            <div class="section2">
+                <h2>
+                    Obsahuje čeledi
+                </h2>
+                <a href="veverkoviti.html">Veverkovití</a>
+                <a href="bobroviti.html">Bobrovití</a>
+                <a href="dikobrazoviti.html">Dikobrazovití</a>
+                <a href="nutriovití.html">Nutriovití</a>
+                <a href="morcatoviti.html">Morčatovití</a>
+                <a href="mysoviti.html">Myšovití</a>
+            </div>
+            </div>
         </div>
     </body>
 </html>
