--- a/nutriovití.html
+++ b/nutriovití.html
@@ -11,12 +11,12 @@
             <header class="header">
                     <nav class="nav-wrapper">
                         <ul>
-                            <li><a class="active" href="index.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="aboutus.html">About us</a></li>
                             <li><a href="veverkoviti.html">Veverkovití</a></li>
                             <li><a href="bobroviti.html">Bobrovití</a></li>
                             <li><a href="dikobrazoviti.html">Dikobrazovití</a></li>
-                            <li><a href="nutriovití.html">Nutriovití</a></li>
+                            <li><a class="active" href="nutriovití.html">Nutriovití</a></li>
                             <li><a href="morcatoviti.html">Morčatovití</a></li>
                             <li><a href="mysoviti.html">Myšovití</a></li>
                             <li><a href="zdroje.html">Zdroje</a></li>
@@ -24,29 +24,25 @@
                     </nav>
                 <div class="image-wrapper">
                     <h1>
-                        Hlodavci
+                        Nutriovití
                     </h1>
                 </div>
             </header>
         </div>
         <div class="content">
-            <div class="skip-down">
-                <a href="#info"> V  Click here to explore!  V</a>
+            <div class="section">
+                <h2>Zástupci</h2>
+                <li>Nutrie říční</li>
             </div>
-            <div id="info">
-                <div class="section">
-                    <h2>About us</h2>
-                    <P>Zjisti, kdo jsme a nějaké důležité informace o nás.</P>
-                    <a href="aboutus.html">Zjistit více!</a>
-                </div>
-                <div class="section2">
-                    <h2>Members</h2>
-                    <p>
-                        Zjisti, kdo všechno je členem našeho řádu a nějaké zajímavé informace o něm.
-                    </p>
-                    <a href="aboutus.html">Zjistit více!</a>
-                </div>
+            <div class="section2"">
+                <h2>Nutrie říční</h2>
+                <li>Jižní Amerika, uniklé z chovů i v Evropě, Asii a Severní Americe.</li>
+                <li>Žijí v sladkých vodách, na travnatých územích, v bažinách, vodních březích.</li>
+                <li>Živý se částmi různých rostlin.</li>
+                <li>Na noho mají plovací blány, umožňující jim jednoduše plavat a potápět se.</li>
+                <br>
+                <img src="./photos/nutriericni.jpg" width="400" height="230">
             </div>
         </div>
-    </body>
-</html>
+        </body>
+        </html>
