--- a/zdroje.html
+++ b/zdroje.html
@@ -11,7 +11,7 @@
             <header class="header">
                     <nav class="nav-wrapper">
                         <ul>
-                            <li><a class="active" href="index.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="aboutus.html">About us</a></li>
                             <li><a href="veverkoviti.html">Veverkovití</a></li>
                             <li><a href="bobroviti.html">Bobrovití</a></li>
@@ -19,34 +19,25 @@
                             <li><a href="nutriovití.html">Nutriovití</a></li>
                             <li><a href="morcatoviti.html">Morčatovití</a></li>
                             <li><a href="mysoviti.html">Myšovití</a></li>
-                            <li><a href="zdroje.html">Zdroje</a></li>
+                            <li><a class="active" href="zdroje.html">Zdroje</a></li>
+                        </ul>
                         </ul>
                     </nav>
                 <div class="image-wrapper">
                     <h1>
-                        Hlodavci
+                        Zdroje
                     </h1>
                 </div>
             </header>
         </div>
         <div class="content">
-            <div class="skip-down">
-                <a href="#info"> V  Click here to explore!  V</a>
+            <div class="section">
+                <li><i>Wikipedia: Veverka obecná</i> [online]., 2017 [cit. 2022-02-27]. Dostupné z: https://cs.wikipedia.org/wiki/Veverka_obecn%C3%A1</li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
             </div>
-            <div id="info">
-                <div class="section">
-                    <h2>About us</h2>
-                    <P>Zjisti, kdo jsme a nějaké důležité informace o nás.</P>
-                    <a href="aboutus.html">Zjistit více!</a>
-                </div>
-                <div class="section2">
-                    <h2>Members</h2>
-                    <p>
-                        Zjisti, kdo všechno je členem našeho řádu a nějaké zajímavé informace o něm.
-                    </p>
-                    <a href="aboutus.html">Zjistit více!</a>
-                </div>
-            </div>
-        </div>
+        </div> 
     </body>
 </html>
