--- a/bobroviti.html
+++ b/bobroviti.html
@@ -11,10 +11,10 @@
             <header class="header">
                     <nav class="nav-wrapper">
                         <ul>
-                            <li><a class="active" href="index.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="aboutus.html">About us</a></li>
                             <li><a href="veverkoviti.html">Veverkovití</a></li>
-                            <li><a href="bobroviti.html">Bobrovití</a></li>
+                            <li><a class="active" href="bobroviti.html">Bobrovití</a></li>
                             <li><a href="dikobrazoviti.html">Dikobrazovití</a></li>
                             <li><a href="nutriovití.html">Nutriovití</a></li>
                             <li><a href="morcatoviti.html">Morčatovití</a></li>
@@ -24,29 +24,29 @@
                     </nav>
                 <div class="image-wrapper">
                     <h1>
-                        Hlodavci
+                        Bobrovití
                     </h1>
                 </div>
             </header>
         </div>
         <div class="content">
-            <div class="skip-down">
-                <a href="#info"> V  Click here to explore!  V</a>
+            <div class="section">
+                <h2>Obecné informace</h2>
+                <li>Mohutní, 60-80cm, velký ocas.</li>
+                <li>Na zadních nohách mají mezi prsty silnou plovací blánu.</li>
+                <li>Ke kácení stromů a keřů používají přední, spodní řezáky.</li>
+                <li>Na říčkách a tůních staví tzv. bobří hráze.</li>
+                <li>Převážně noční zvířata.</li>
+                <li>Neupadají do zimního spánku.</li>
+                <li>Živí se kůrou a lýkem listnatých stromů, na jaře i některými bylinami.</li>
             </div>
-            <div id="info">
-                <div class="section">
-                    <h2>About us</h2>
-                    <P>Zjisti, kdo jsme a nějaké důležité informace o nás.</P>
-                    <a href="aboutus.html">Zjistit více!</a>
-                </div>
-                <div class="section2">
-                    <h2>Members</h2>
-                    <p>
-                        Zjisti, kdo všechno je členem našeho řádu a nějaké zajímavé informace o něm.
-                    </p>
-                    <a href="aboutus.html">Zjistit více!</a>
-                </div>
+            <div class="section2">
+                <h2>Zástupci</h2>
+                <li>Bobr kanadský</li>
+                <li>Bobr evropský</li>
+                <br><br>
+                <img src="./photos/bobrevropsky.jpg" width="400" height="230">
             </div>
         </div>
     </body>
-</html>
+ </html>
